--- a/app/code/Eduweb/Brand/view/frontend/templates/view/index.phtml
+++ b/app/code/Eduweb/Brand/view/frontend/templates/view/index.phtml
@@ -12,3 +12,15 @@
 <?php foreach ($brandInfo['collaborations'] as $collaboration): ?>
     <p><?= $collaboration ?></p>
 <?php endforeach; ?>
+
+<?php
+
+var_dump($block->getData());
+var_dump($block->getData('code'));
+var_dump($block->getData('is_enabled'));
+var_dump($block->getData('descriptions'));
+
+$block->getIsEnabled();
+$block->setIsEnabled(true)
+
+?>
