--- a/app/code/Eduweb/Brand/view/frontend/templates/view/index.phtml
+++ b/app/code/Eduweb/Brand/view/frontend/templates/view/index.phtml
@@ -12,3 +12,5 @@
 <?php foreach ($brandInfo['collaborations'] as $collaboration): ?>
     <p><?= $collaboration ?></p>
 <?php endforeach; ?>
+
+<?= $block->getChildHtml('child_1_alias') ?>
