--- a/app/code/Eduweb/Brand/view/frontend/layout/brand_view_index.xml
+++ b/app/code/Eduweb/Brand/view/frontend/layout/brand_view_index.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <head>
+        <meta name="test" content="test"/>
+    </head>
     <body>
         <referenceContainer name="content">
             <block name="hello_world" as="hello_world" template="Eduweb_Brand::view/index.phtml">
