--- a/app/design/frontend/Eduweb/simple/Eduweb_Brand/layout/brand_view_index.xml
+++ b/app/design/frontend/Eduweb/simple/Eduweb_Brand/layout/brand_view_index.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
 
+    <head>
+        <remove src="Eduweb_Brand::css/file.css"/>
+    </head>
+
     <body>
         <referenceContainer name="content">
             <block name="child_1_theme" template="Eduweb_Brand::view/custom.phtml" before="-">
@@ -9,7 +13,11 @@
                 </arguments>
             </block>
         </referenceContainer>
+
+        <move element="model_y" destination="content" before="-"/>
+
+        <referenceBlock name="model_x" remove="true"/>
     </body>
 
-    
+
 </page>
